kubernetes.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
spec:
  selector:
    matchLabels:
      app: $APP_NAME
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      containers:
        - image: $DOCKERHUB_USERNAME/$APP_NAME
          name: $APP_NAME
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME-postgres
spec:
  selector:
    matchLabels:
      app: $APP_NAME-postgres
  template:
    metadata:
      labels:
        app: $APP_NAME-postgres
    spec:
      containers:
        - image: postgres
          name: $APP_NAME-postgres
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: $APP_NAME-db-volume
      volumes:
        - name: $APP_NAME-db-volume
          persistentVolumeClaim:
            claimName: $APP_NAME-postgres-claim

---
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME
spec:
  type: ClusterIP
  ports:
    - name: $APP_NAME
      port: 8000
  selector:
    app: $APP_NAME

---
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME-postgres
spec:
  type: ClusterIP
  ports:
    - name: $APP_NAME-postgres
      port: 5432
  selector:
    app: $APP_NAME-postgres

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $APP_NAME
  annotations:
    dev.okteto.com/generate-host: $APP_NAME
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: $APP_NAME
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
